Fix about viewport on ios

--- a/public/styles/about.css
+++ b/public/styles/about.css
@@ -1,10 +1,10 @@
 body {
     display: grid;
     column-count: 2;
-    padding-left: 10%;
-    padding-right: 10%;
+    padding-left: 10vw;
+    padding-right: 10vw;
 
-    width: calc(100% - 20%);
+    width: calc(100vw - 20vw);
 
     background-color: var(--background-color);
 }
@@ -19,7 +19,7 @@ p, span, li {
 
 .container {
 
-    width: calc(100% - 40px);
+    width: calc(100vw - 40px);
 
     background-color: var(--container-color);
     border-radius: 15px;
